--- a/src/LetsMeetUp/LetsMeetUp.csproj
+++ b/src/LetsMeetUp/LetsMeetUp.csproj
@@ -98,11 +98,13 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\User.cs" />
     <Compile Include="View\OptionsBar.xaml.cs">
       <DependentUpon>OptionsBar.xaml</DependentUpon>
     </Compile>
